--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         operating-system: ['ubuntu-latest']
-        php-versions: ['7.4']
+        php-versions: ['8.1', '8.2', '8.3']
         phpunit-versions: ['latest']
 
     steps:
@@ -40,7 +40,7 @@ jobs:
         run: php vendor/bin/phpcs src/ tests/ --colors -p
 
       - name: Send test coverage to codecov.io
-        uses: codecov/codecov-action@v2.1.0
+        uses: codecov/codecov-action@v4.5.0
         with:
           files: clover.xml
           fail_ci_if_error: true # optional (default = false)
