--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "composer/ca-bundle": "^1.1",
+    "php": ">=8.1",
+    "composer/ca-bundle": "^1.5",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^6.0 || ^7.0",
-    "league/url": "^3.3",
-    "nesbot/carbon": "^2.41"
+    "guzzlehttp/guzzle": "^7.0",
+    "nesbot/carbon": "^3.7",
+    "league/url": "^3.3"
   },
   "autoload": {
     "psr-4": {
@@ -37,9 +37,9 @@
     }
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.5",
-    "phpmd/phpmd": "^2.9",
-    "phpunit/phpunit": "^8.5",
-    "spatie/phpunit-snapshot-assertions": "3.0"
+    "squizlabs/php_codesniffer": "^3.10",
+    "phpmd/phpmd": "^2.15",
+    "phpunit/phpunit": "^11.3",
+    "spatie/phpunit-snapshot-assertions": "^5.1"
   }
 }
